<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RDP Application</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="data_connection">Data Connection Server</string>
    <string name="server_name">server name</string>
    <string name="name">Name</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="registration_page">Registration Page</string>
    <string name="register">Register</string>
    

</resources>
