<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#808080"
    android:orientation="vertical" >

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2b88FF"
            android:padding="@dimen/dp_6"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_16" />
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_6"
            android:gravity="center"
            android:layout_margin="@dimen/dp_20"
            android:text="@string/registration_page"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_22" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_15"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/edt_registration_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:padding="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_8"
            android:background="@drawable/border"
            android:textSize="@dimen/dp_14" />

        <EditText
            android:id="@+id/edt_registration_email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp_10"
            android:background="@drawable/border"
            android:layout_marginBottom="@dimen/dp_8"
            android:textSize="@dimen/dp_14" />

        <EditText
            android:id="@+id/edt_registration_mobile_numbe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:padding="@dimen/dp_10"
            android:background="@drawable/border"
            android:inputType="number"
            android:maxLength="10"
            android:layout_marginBottom="@dimen/dp_18"
            android:textSize="@dimen/dp_14" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_10"
            android:text="@string/register"
            android:textSize="@dimen/dp_14"
            android:background="#808000"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>